<resources>
    <string name="app_name">Demo Dialog</string>
    <string name="d1">DEMO 1 - SIMPLE DIALOG</string>
    <string name="d2">BUTTON 2 - BUTTONS DIALOG</string>
    <string name="d3">DEMO 3 - TEXT INPUT DIALOG</string>
    <string name="enter">enter text</string>
    <string name="ex3">Exercise 3</string>
    <string name="d4">DEMO 4 - DATE PICKER DIALOG</string>
    <string name="d5">DEMO 5 - TIME PICKER DIALOG</string>
</resources>
